# ainm_main_nlp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  deploy.sh  download_logs.sh  pyproject.toml  run_local.sh  test_local.py
.claude/commands/: analyse-revision.md  improve-task.md  test-api.md  test-local.md
docs/: PROJECT_OVERVIEW.md  TASK_ANALYSIS_FINDINGS.md
docs/google_cloud_docs/: account_setup.txt  deploy_on_cloud_run.txt  overview.txt  (+1 more)
example_code/: ai_agent_connection_test.py  anthropic_vertex_test.py  pydantic_ai_claude_example.py  pydantic_ai_example.py
example_runs/: 20260319_225327_828_console.txt  20260319_225327_828_run.txt  20260319_225958_703_console.txt  20260319_225958_703_run.txt  20260319_230327_229_console.txt  20260319_230327_229_run.txt  20260319_230419_229_console.txt  20260319_230419_229_run.txt  20260319_230938_601_run.txt  20260319_231629_105_console.txt  20260319_231629_105_run.txt  20260319_231917_324_console.txt  20260319_232719_704_console.txt  20260319_232719_704_run.txt  20260319_233103_726_console.txt  20260319_233103_726_run.txt  20260319_235312_359_run.txt  20260320_000216_260_run.txt  20260320_000522_003_console.txt  20260320_001409_800_run.txt  20260320_002113_199_run.txt  20260320_002648_338_run.txt  20260320_010300_635_console.txt  20260320_010618_369_console.txt  20260320_012055_877_console.txt
example_runs_by_task/: current_scores.txt
notebooks/: simulator.ipynb  test_agent.ipynb  test_tasks.ipynb
scripts/: mine_errors.py
src/: main.py  models.py
tests/: test_workflow_tools.py
(+1086 files in other folders)
